# jumperless-firmware-embassy

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
boardspec/: README.md
boardspec/v4/: lanes.txt  nodes.txt
boardspec/v5/: bounceports.txt  lanes.txt  nodes.txt
crosspoint-matrix/: Cargo.toml  rust-toolchain.toml
crosspoint-matrix/src/: chip_status.rs  layout.rs  lib.rs  nets_to_connections.rs  util.rs
crosspoint-view/: README.md  package-lock.json  package.json  tsconfig.json
crosspoint-view/src/: app.tsx  index.html  layout.json  styles.scss
jumperless-common/: Cargo.toml  README.md
jumperless-common/src/: board.rs  chip_status.rs  layout.rs  lib.rs  nets_to_connections.rs
jumperless-common/src/board/: v4.rs  v5.rs
jumperless-firmware/: Cargo.toml  README.md  example.jlnets  rust-toolchain.toml
jumperless-firmware/.cargo/: config.toml
jumperless-firmware/src/: ch446q.rs  chips.rs  crosspoint.rs  leds.rs  main.rs  netfile.rs  nets.rs  shell.rs  task.rs
jumperless-firmware/src/task/: leds.rs  net_manager.rs  nets_to_chips.rs
jumperless-types/: Cargo.toml  boardspec.rs  rust-toolchain.toml
jumperless-types/src/: board.rs  board_spec.rs  chip_id.rs  dimension.rs  edge.rs  lane.rs  lib.rs  net.rs  net_id.rs  node.rs  port.rs
jumperless-types/src/board_spec/: generator.rs
jumperless-types/src/map/: port_map.rs
jumperless-types/src/set/: edge_set.rs  lane_set.rs  node_set.rs  port_set.rs
line_buffer/: Cargo.toml
line_buffer/src/: lib.rs
src/: bus.rs  ch446q.rs  crosspoint.rs  leds.rs  main.rs  nets.rs  shell.rs
src/task/: leds.rs  watchdog.rs
