[workspace]
resolver = "2"
members = [
    "jumperless-firmware",
    "line_buffer",
    "jumperless-common",
    "jumperless-types",
]

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "45a2abc392df91ce6963ac0956f48f22bfa1489b" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "45a2abc392df91ce6963ac0956f48f22bfa1489b" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "45a2abc392df91ce6963ac0956f48f22bfa1489b" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "45a2abc392df91ce6963ac0956f48f22bfa1489b" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "45a2abc392df91ce6963ac0956f48f22bfa1489b" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "45a2abc392df91ce6963ac0956f48f22bfa1489b" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "45a2abc392df91ce6963ac0956f48f22bfa1489b" }

[profile.release]
lto = true
opt-level = 's'
incremental = false
codegen-units = 1
debug = 2

