[package]
name = "crosspoint-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.11.3", optional = true }
log = "0.4.21"

[[bin]]
name = "nets-to-chips"
required-features = ["std"]

[features]
default = []
std = []
test = ["std", "dep:env_logger"]
