[package]
name = "jumperless-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.11.3", optional = true }
heapless = "0.8.0"
log = "0.4.21"

jumperless-types = { path = "../jumperless-types" }

[[bin]]
name = "nets-to-chips"
required-features = ["std"]

[features]
default = []
std = ["jumperless-types/std"]
test = ["std", "dep:env_logger"]
